--- a/doc/设计方案书.md
+++ b/doc/设计方案书.md
@@ -1,8 +1,10 @@
 # 基于FPGA的SIFT拼接设计方案
 
-toc
+- [基于FPGA的SIFT拼接设计方案](#基于fpga的sift拼接设计方案)
+  - [处理步骤](#处理步骤)
+  - [性能分析](#性能分析)
 
-## 处理流程
+## 处理步骤
 
 1. 检测关键特征点，计算特征描述子
 2. 匹配特征点，返回匹配结果
@@ -11,3 +13,18 @@ toc
 5. 图像融合
 
 
+## 性能分析
+通过运行软件原型（以1920x1080的为例），统计得到性能参数如下：
+
+| w	| h | pixel | time | detectAndDescribe |matchKeypoints|
+|---|---|---|---|---|---|
+|1920|	1080|2073600|2.51|1.640625	|0.625
+
+可见主要时间花在了detectAndDescribe。detectAndDescribe对应步骤1, 
+![detectAndDescribe流程](https://img2018.cnblogs.com/blog/1471528/201903/1471528-20190330204125547-535493662.png)
+
+***
+
+##参考文献
+
+[SIFT算法原理详解](https://www.cnblogs.com/Alliswell-WP/p/SIFT.html)
