--- a/doc/设计方案书.md
+++ b/doc/设计方案书.md
@@ -38,6 +38,7 @@ FPGA性能估算
 ***
 
 高斯函数的filter size $N=[(6\sigma+1)]$
+![](./pic/%E9%AB%98%E6%96%AF%E5%87%BD%E6%95%B0.png)
 
 关键技术：**卷积核分离**
 
@@ -55,6 +56,22 @@ FPGA性能估算
 为什么使用DOG：LOG计算复杂，使用差分来近似微分。
 
 高斯差分金字塔是在高斯金字塔的基础上操作的，其建立过程是：在高斯金字塔中的每组中相邻两层相减（下一层减上一层）就生成高斯差分金字塔.
+
+**检测局部极值点**
+![局部极值点](./pic/%E5%B1%80%E9%83%A8%E6%9E%81%E5%80%BC%E7%82%B9.png)
+
+
+
+尺度空间总量 *S*
+为了在每组中检测出 S 个尺度的极值点，则 DOG 图像金字塔每组需 S + 2 层图像，而 DOG 图像金字塔是由高斯图像金字塔相邻两层相减得到的，因此高斯图像金字塔每组需 S + 3 层图像，一般 S 会取值在 [3,5] 之间，Lowe 建议S 为 3。
+
+
+**最初的最初 关于第一层的模糊**
+
+除了第一组外，其他组的第一层是上一组提取倒数第三层图像然后再进行降采样。原因有二
+   - 本组第一层图像的尺度因子与上一组的倒数第三层尺度因子是一致的，因此获取本组第一层图像的过程就不再需要根据原图再卷积了，而是可以直接降采样来得到本组的初始图像。
+   - 保证每组之间和每层之间的尺度因子就都是连续的。
+ 
 
 *知识补充 角点检测*
 在局部小范围里，如果在各个方向上移动窗口，窗口内区域的灰度发生较大变化，就认为在窗口内遇到了角点；如果窗口在各个方向移动时，窗口内图像的灰度没有发生变化，那么窗口内就不存在角点。
